// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "170b8008f53312",
  "0c1dc4c931d1c1",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "0ce488d40ca43a",
  "05132ab7403468",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "155e8c3db4d986",
  "0a1b0f4bd8f20d",
  "02a776517f7993",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "0d295f8cde502e",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "01bf99e87db859",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "193b164639ff17",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "0535ec030bcd20",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "0770d4b3998fcc",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "1488ef13c2ba05",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "076572e8a6469d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "06fc74351c4400",
  "0f16afb3799454",
  "11738969c907ca",
  "1b8f37f2a9093b",
  "1e68f3ba53f571",
  "0485c50b93f58a",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "0ab6dad976f4d6",
  "1703c21c77e591",
  "1bfae6003d0120",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1e07425e0ceca5",
  "03adb629b9f6a2",
  "0801a3166655dd",
  "1469df7798eb23",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "127831c33e9870",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "0e2eb4f1bf33c0",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "042cb9e8865bd4",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1062c7227643cb",
  "1e1b9a02c20fb9",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "17289c66a62109",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "150482ee07be66",
  "0c2536c1434f80",
  "19198c737937c2",
  "1f76c94b1d47bb",
  "06c519926b92bd",
  "11d2c8fb928a4a",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1e4ca9d8b19100",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "025dc26c5fcfdc",
  "0807bbec8a25b9",
  "1b1961c4577aad",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "0526c3e248c604",
  "00f9fa180e3660",
  "05404ea99a8c96",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "011e3784b6244b",
  "05650d09c80472",
  "09bb7b6b44a6f4",
  "1d54a658a6c9dc",
  "13a4596cefe1b0",
  "1de48df85fb3e9",
  "024d4ea446736f",
  "15e086a63ac0a6",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "001622b87364f7",
  "0454ec37cb69b5",
  "0e3b7df8db6da7",
  "1609195dbf320a",
  "1b089453084835",
  "19d409d40da594",
  "02717ab0a86321",
  "132f41736829c8",
  "0bde8979ee2f85",
  "12da942897714e",
  "1ce93ec9cd9d3d",
  "0a6cd1bafcf66c",
  "1a2f3d1d2832a5",
  "1ea7fa71f7f897",
  "1d0e7194e178ea",
  "157c53371bed28",
  "1fe2c4a83e8893",
  "04867d04e87cd1",
  "06fa1554d1b136",
  "12d872e2023618",
  "12cd73274b3c59",
  "1c0c003bf07f13",
  "10746ca67a47fb",
  "0a0b303d49bd69",
  "13ae7795edc2b8",
  "0066209dac1245",
  "0601462a3b59bc",
  "01f4fa00718c4d",
  "1ddd46ed7ca87a",
  "028505396a3830",
  "0b104211259da9",
  "01ff385cee5d14",
  "098bebd15f4c16",
  "0ab92f6f94f795",
  "02f1ee53c58237",
  "1d51c8401635a4",
  "10506717147790",
  "0b9fb0596b9c15",
  "1a8bdf81015c5b",
  "1fc2d5f9757cf5",
  "152e8d77477d2f",
  "139200cccbf0c3",
  "04e0636d5d2c0a",
  "13bd5ee554f21f",
  "02cacde3909378",
  "13fa413c0a0c53",
  "06f80d0e2584a3",
  "18c7c2b295f8d4",
  "138fe310ec173d",
  "0e8aec3090851d",
  "1d464ff13e4749",
  "070bab9f41a149",
  "052b2e3f1d7d89",
  "032b67c6704e85",
  "03f24e53364473",
  "185106d77f4635",
  "192b0109766691",
  "056569626d91d8",
  "15fb8cd1d28270",
  "05b05a65c5c3bd",
  "18b2ebe111b0b0",
  "0832bc1891481e",
  "0159e25046112e",
  "0d7cf88751f812",
  "10aa8d3013c5c5",
  "0dbac1e1e5d00e",
  "07d4ce7218b5e3",
  "11b4a0fc67568d",
  "1afcf2ee62a617",
  "03c1201cf9d20b",
  "0c3d008e99e962",
  "02ab7904558b3c",
  "0107617689c753",
  "135fa96a86ec14",
  "04b2cd82667710",
  "0d80fd3b2bf08e",
  "156b9615f6de54",
  "16cc04a8827f32",
  "1df78f327d55c7",
  "0f950ea1836dd3",
  "0f3e17083daa06",
  "080c6a9b0c01bc",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "1e94425e6771c5",
  "1421d152456a3a",
  "0c42a5d000f468",
  "0458e5a1bb4790",
  "1fb1a94668bb22",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "00ab87e6bfd815",
  "0b3ef80297a3a1",
  "054a2bf467369e",
  "0e6b095c5c3bce",
  "06ddb3ce632e8b",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "1b06c10fd069cf",
  "08edcce0dd4385",
  "1cb340c1159e36",
  "00008b9482c8a4",
  "1f378209e83279",
  "1d6795a5e87a35",
  "08f1126df556d5",
  "0883dac6baf369",
  "13d92157763150",
  "0a06cf6d82c32c",
  "1975fe3f0e8b97",
  "0ec0a3b494bb84",
  "0d8e352132ef0b",
  "110662c650e9e3",
  "0b82f299464775",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "06c7895497a640",
  "1fc37e759e3a22",
  "01b92d270831fb",
  "14f404cf83bffc",
  "19d635afcf1064",
  "12021635a06afd",
  "0ebd01af21ce66",
  "16304b5a4a5162",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1e27e042552371",
  "0316d54d446aa8",
  "013e425454dd4c",
  "0f0a21393d6879",
  "1d24e4b25e2b05",
  "0f798ca95ae623",
  "18c5f156a6c9df",
  "06a41ec9efaa55",
  "0cc7d542decb6e",
  "1d6ec92562bac9",
  "00791f60245386",
  "1aeb1a24049840",
  "0d6e868c78c2f0",
  "0e2166d7f66b36",
  "0490327e13629c",
  "014b927ef11857",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "1ceccc98074671",
  "1769a2773c0003",
  "1422f160ecb2ad",
  "0e2ccf25b35e30",
  "1e8fcaa7a6910c",
  "040a4e4f024ead",
  "0ba009cf59ae9c",
  "0d8376b74a285a",
  "10d71f05e2a8cf",
  "1eeee4a748ebf4",
  "0f6da6475a9b00",
  "1280702bf87bde",
  "0ab7059d4eb0a0",
  "1d5fb51c55699a",
  "0e0256d26c9dfc",
  "0670c18661082c",
  "19765d799fd7aa",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "0b1e0457f48d4c",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "0960914e5bcb77",
  "1aaf411b421dab",
  "150898c71a1a97",
  "1c295617e904b9",
  "0ca5a4cb7c5bb4",
  "0ab0b4ef9e9766",
  "1af6153285bfe6",
  "19c94adc45f7b1",
  "0b5dab69178e0b",
  "1e89f743d9ac93",
  "168be1da18953d",
  "06dc1edff14c9c",
  "0f87b0ac210899",
  "100d2ea572ab5b",
  "051cb9dda50b97",
  "0b864790797f5f",
  "17fda2c672d06a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "170b8008f53312",
  "05650d09c80472",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "1ce93ec9cd9d3d",
  "0a1b0f4bd8f20d",
  "1a2f3d1d2832a5",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "06fa1554d1b136",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "0601462a3b59bc",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "0ab92f6f94f795",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "1a8bdf81015c5b",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "138fe310ec173d",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "056569626d91d8",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "11b4a0fc67568d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "0f3e17083daa06",
  "0f16afb3799454",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "1703c21c77e591",
  "0b3ef80297a3a1",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "1f378209e83279",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "14f404cf83bffc",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "013e425454dd4c",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "0e2166d7f66b36",
  "0c2536c1434f80",
  "19198c737937c2",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1422f160ecb2ad",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "150898c71a1a97",
  "00f9fa180e3660",
  "0ca5a4cb7c5bb4",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "08943c8b8ce9f9",
  "110af881ca0566",
  "18c1f6ae718a28",
  "1f8488fd7dbf53",
  "0925c4b7dc6019",
  "0f82f5a499e4fe",
  "020e3217ecd271",
  "1916fb8cd384a2",
  "058b43953bf93f",
  "147896a707f331",
  "017778aeb7535e",
  "0dfaece05d9894",
  "0b74686d73c519",
  "0ebe54e97d73da",
  "11eda02090efdd",
  "1b1970ebfde86e",
  "16d925ea7e2b03",
  "0c206f98f57e77",
  "1c7e2e005ea293",
  "15c210adccb2a2",
  "0c9c7a5f8f3c09",
  "056d1b55172a41",
  "05b8fce4fc5f80",
  "1833f35926bc40",
  "11447a7bfac4c3",
  "06021bade436aa",
  "098d0ffe46fc60",
  "0ae3779d3e36ae",
  "095c4cce62fe6b",
  "07a576243668ea",
  "17c960431a475b",
  "1f0e99f069a711",
  "05c4ef699acaba",
  "1450fd2932dd68",
  "0748addb9b064c",
  "092e79508ae708",
  "020924b65d847f",
  "1cb3a4a97f3303",
  "0de01f79a7be05",
  "1ad56b497a7966",
  "0955b613a92bf5",
  "0c6267026f52b0",
  "1b50ae4f5d7844",
  "0f4b9add5c722d",
  "1736eb19596386",
  "141d9b385530a5",
  "176add7d734442",
  "096cb403258780",
  "110cabd08ef0b7",
  "14dbcc7d913944",
  "0313b787d54a0b",
  "07c52e73b4032e",
  "0b79dea66ea8c4",
  "00097ab3a80064",
  "1238e0cd4995dc",
  "0f17d6a9cbd95f",
  "1c156d3450f2c1",
  "07b0ab3914648f",
  "07d2116fb0bc22",
  "0c0fbd78c9dab9",
  "19ca397ece1938",
  "002c96be6954d3",
  "09ab443572f105",
  "1a1ef7da012543",
  "1d73a2d73a3325",
  "1a23dd5d26ae24",
  "01cb46cd2144f2",
  "145117dc655c3b",
  "0ebe1872c7173b",
  "0bba73f7728529",
  "09a233df6fff88",
  "1157e555dcbbb3",
  "14712875b5fd19",
  "017e41c231f13f",
  "1db288bfd14c29",
  "0846dca8f85db5",
  "15372a63196b88",
  "1b83fa1e225900",
  "1502486e5a6230",
  "1c087a18eede09",
  "007a28c7b6e33d",
  "12269d7083481d",
  "195338d80b9392",
  "0b1ba1559ba2f4",
  "1a17e29e986cc6",
  "18d018dff249ca",
  "1664ffd8fd5d72",
  "0c3022444069ed",
  "1c6a7cba0210ee",
  "0a2336195ddf45",
  "1a555e8eba64d6",
  "092dec9285de70",
  "0d90fa84d2b6c6",
  "0949be4ace614d",
  "0777e1f24cc0a2",
  "1ff9e5289e0d7f",
  "05b22195173ff0",
  "086ce696752967",
  "035307e25e55b9",
  "0ceef63f391459",
  "1cc93ac408bcfe",
  "08a77aaca76bc2",
  "0774a3d89b69d2",
  "1d8f73a6540b19",
  "0765760a6ddb08",
  "1ec7ba09799af1",
  "02333c251da559",
  "0724f54e124525",
  "1dff532115f98d",
  "0bb22341f2add9",
  "1b31d47af9d406",
  "177bb6b8b20cfe",
  "19cded039c6ead",
  "0f9ed677b9a0b4",
  "053da4a377ae0b",
  "0a5ff6cc9fe7a5",
  "15997dc88b1ee5",
  "1dc4dc45bfcee0",
  "1828877b3f4073",
  "1a57549831fb67",
  "10ef143cdd2c20",
  "0b9bb164f0304c",
  "00421439baa9ee",
  "0ee685acf41491",
  "1eb99fe373229b",
  "17ff04d619bc11",
  "04d427ffed7043",
  "04a6ee6b408e78",
  "1316c8e405401c",
  "1a649d3cf935f3",
  "0a4d635665511e",
  "1d1eceeb12e5c8",
  "1decdfe9a708b9",
  "171f8f3d958507",
  "1362e5b539c114",
  "196f06e933ad95",
  "1d8251f3175ec7",
  "02071b94e5e60f",
  "119fc6280ebee7",
  "092a21d3a588d6",
  "0dd05daa8d44b3",
  "0a02c430a88053",
  "071cba54977c49",
  "00c31b2219d355",
  "071950e1c4fb14",
  "0768626fcec4b7",
  "1e9db321bf4431",
  "11fbc0a7c0d019",
  "0e9994ea789da6",
  "0c17d63ec14e34",
  "0c075014d93451",
  "03a5c3c9ef8448",
  "1a4d07bb1d7f2c",
  "1962761b5291ae",
  "052eca5a0cb9ab",
  "0f834361f952df",
  "1e02aaa99973f5",
  "068dce829de973",
  "0995cb3ef416cf",
  "039abc12e12f05",
  "081bb10bcc29fd",
  "0ea5a9ff91d4d2",
  "0158b79c765d14",
  "0c484bee7bb313",
  "03221473d8d233",
  "07634f9a6ea55b",
  "0a8c37ab1bf444",
  "1014678ff519e2",
  "0b0ce376342cef",
  "1c048b48eb0256",
  "04d5fcd0eb91ca",
  "194d24a718027c",
  "1459d63fcebd47",
  "14e21e7776ef66",
  "1a486ad5a6026f",
  "17090d04caff7a",
  "1debd7ffab57ae",
  "192b521800c102",
  "166383e0e28a2c",
  "07f263822a4d42",
  "132201d388aefa",
  "1f2c943b3a9198",
  "1b0f179daefd27",
  "0195429ac04fc7",
  "05914d395fcd72",
  "0da3b920cbd847",
  "0d29a081ee8fca",
  "1fa35ac29704d1",
  "1d54e2587a9b5b",
  "137739216e4760",
  "19854cfe13548b",
  "173d5bd9a7a317",
  "1c7b8fa0e5280f",
  "003eb9ca400409",
  "103500ca5ca370",
  "0d6ed8705ea26a",
  "14c84d0061b395",
  "00afa56c5adeee",
  "14ca45b2240ec2",
  "06478a44f5bb4d",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "10e660a3b8f458",
  "15d840da06cc49",
  "143d0c0db012d8",
  "01f2f58dd71551",
  "0c9a9068787403",
  "14ceeaab9a2a8c",
  "020e3217ecd271",
  "0c68284c6b45a6",
  "058b43953bf93f",
  "0759f62a36d28c",
  "17a7396ef28f17",
  "1111dd797e2909",
  "14523cbe34f02d",
  "1969305a7e3926",
  "193abe474b223d",
  "1a27ca1694eafc",
  "16d925ea7e2b03",
  "06fbc8195b77b2",
  "1c23d7b82e6c28",
  "1ab6002a6b59c0",
  "0282528edca116",
  "14596dd719a010",
  "16d385b4ea4b4d",
  "0e0a71d791a8d1",
  "136f4b73420311",
  "10de8b65bc2937",
  "1eff4dd24c79f1",
  "06897c3d33d8b6",
  "028065ae29304b",
  "120c25651ba9ff",
  "0ed5b8c67ae125",
  "13dd2f9cfc0e4a",
  "05c39331ac126c",
  "06a23061e8c9f7",
  "140f9aa61373b9",
  "092e79508ae708",
  "0f3573c9b41a09",
  "0bb96611b66527",
  "1b406426741be5",
  "074c62165d8d9d",
  "15d37f03a7f7db",
  "0aa0b982074b8d",
  "16bd95c6210a64",
  "1084d0e2fb1ad4",
  "15ff390f03db00",
  "158825881ad33c",
  "11e205fa964964",
  "096cb403258780",
  "14f8356a5d2f3a",
  "00347100dee1de",
  "01f0649a225e45",
  "07c52e73b4032e",
  "0b0282bd995044",
  "00097ab3a80064",
  "189880da060076",
  "12aca23784dfaf",
  "172494292c56be",
  "07b0ab3914648f",
  "08230f3dca2843",
  "0379ca22400a7a",
  "1c23c30743ad82",
  "10b3e9434bb7be",
  "154807ba517f91",
  "1a1ef7da012543",
  "0cc0971222362e",
  "1a23dd5d26ae24",
  "0d76cc3a7ed028",
  "02451bcf126555",
  "104ad9fcdad2e5",
  "00374bf8df801e",
  "10e3b474eb88a1",
  "10d4cb3fa8782f",
  "05f27225b54499",
  "098e9b71712c04",
  "1182db8f0119dd",
  "1cae8b91a24c2f",
  "00bd0ea8d8b711",
  "09b8006e0f2c9e",
  "0e99781dde8fe3",
  "1f9003a5642b11",
  "044581c9655780",
  "12269d7083481d",
  "1f9005536aac7b",
  "1e63b51ad32434",
  "1441272367cb66",
  "04ab9edf353f28",
  "1c26225aa5b60c",
  "0d315d9f18f3da",
  "0b9f21e2471130",
  "1bbe9e912075fe",
  "1e32d5cb94130f",
  "18e818a63e4449",
  "0f27c4e6bdcf37",
  "0f72508794ec79",
  "064938f19d5201",
  "12984971d6cbce",
  "0b40acecf5d559",
  "0ce19a49484844",
  "035307e25e55b9",
  "108377df54a7c1",
  "0ed6ffbba61c13",
  "15d379d019f1ca",
  "0774a3d89b69d2",
  "15824f003e1258",
  "1ed8eeb73d4f12",
  "032a64674bbc22",
  "0616736f1946d3",
  "0b0c8ea0f7aec1",
  "1ac5d14a4206f2",
  "1c2702ee2a9dab",
  "0ed81948ab9591",
  "177bb6b8b20cfe",
  "0c958591334e11",
  "140893caa1adc4",
  "1aec1cca619803",
  "136d9534f2b071",
  "0c4adec70ed92e",
  "0002b98d8fbd8c",
  "14f13008149ebe",
  "1a5ca0ce6849bb",
  "10ef143cdd2c20",
  "12616b881fde44",
  "00421439baa9ee",
  "147d05a1e51a5e",
  "0386ab58a43709",
  "1a7056eed9e807",
  "0f8dbce6461e8d",
  "119b9e040dc56f",
  "1e027c28a6cdcb",
  "1a649d3cf935f3",
  "0e3fcf2fe878f5",
  "18787358f8b195",
  "1d35d1bba6fd87",
  "06d51a9ea16d03",
  "1202fa014aeb77",
  "196f06e933ad95",
  "0182a207979f71",
  "0f5c829c19a62b",
  "19b691a0678e45",
  "0478a2cc62c45e",
  "0dd05daa8d44b3",
  "021564a7673ba7",
  "071cba54977c49",
  "0df53139a3a660",
  "111933d957145f",
  "0ce275f79b2a36",
  "1e9db321bf4431",
  "1a5cde5ba0e6a4",
  "17bb33e398d4b4",
  "0b00c6f785a73d",
  "07f5e493e7a618",
  "0728423d16258d",
  "14850b1dc7911a",
  "094fa53a6938ee",
  "04fe1a03bd5d9a",
  "0e46bc5b83fc62",
  "0c8cfe35f7d661",
  "03cf86968f9324",
  "002b7d3b79e43c",
  "12fe2a9d24bf43",
  "13cf738411e973",
  "106c8558f0f6e6",
  "1d380ecf578332",
  "1dfa35602e49cc",
  "03221473d8d233",
  "18c22d8bd5c098",
  "0a8c37ab1bf444",
  "17558109cec877",
  "0cca6c869431cb",
  "0ef5a222cbefa4",
  "04d5fcd0eb91ca",
  "1715eb4d85b477",
  "054b3def8c7b15",
  "05f06df0afa8ce",
  "0d62efb52d4152",
  "04b2a4cc50851f",
  "054fe7ee812b8a",
  "0e069679c27d39",
  "166383e0e28a2c",
  "10c0722155d2b2",
  "01a12d3d5453a4",
  "1f2c943b3a9198",
  "1b0f179daefd27",
  "056518e8ce4378",
  "1f41b05eb44b57",
  "0f8d363ab7447b",
  "149f79e9cbe080",
  "1d3dacc2ae7978",
  "075735a635a6cf",
  "1e0a520c39eed2",
  "1a3907d86836f8",
  "0e48af9f192ba6",
  "077bde87323755",
  "18e025531dda6a",
  "18e03a9626dff4",
  "0d6ed8705ea26a",
  "14918c87077384",
  "1406afc737c3c4",
  "029ee57d41fda3",
  "1d4d1da9f8c529",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "08943c8b8ce9f9",
  "15d840da06cc49",
  "18c1f6ae718a28",
  "1f8488fd7dbf53",
  "0925c4b7dc6019",
  "0f82f5a499e4fe",
  "020e3217ecd271",
  "1916fb8cd384a2",
  "058b43953bf93f",
  "0759f62a36d28c",
  "17a7396ef28f17",
  "0dfaece05d9894",
  "0b74686d73c519",
  "0ebe54e97d73da",
  "11eda02090efdd",
  "1b1970ebfde86e",
  "16d925ea7e2b03",
  "0c206f98f57e77",
  "1c7e2e005ea293",
  "15c210adccb2a2",
  "0c9c7a5f8f3c09",
  "14596dd719a010",
  "05b8fce4fc5f80",
  "0e0a71d791a8d1",
  "11447a7bfac4c3",
  "06021bade436aa",
  "098d0ffe46fc60",
  "0ae3779d3e36ae",
  "095c4cce62fe6b",
  "120c25651ba9ff",
  "17c960431a475b",
  "1f0e99f069a711",
  "05c4ef699acaba",
  "1450fd2932dd68",
  "0748addb9b064c",
  "092e79508ae708",
  "020924b65d847f",
  "0bb96611b66527",
  "0de01f79a7be05",
  "1ad56b497a7966",
  "0955b613a92bf5",
  "0c6267026f52b0",
  "1b50ae4f5d7844",
  "0f4b9add5c722d",
  "15ff390f03db00",
  "141d9b385530a5",
  "176add7d734442",
  "096cb403258780",
  "110cabd08ef0b7",
  "00347100dee1de",
  "0313b787d54a0b",
  "07c52e73b4032e",
  "0b79dea66ea8c4",
  "00097ab3a80064",
  "1238e0cd4995dc",
  "0f17d6a9cbd95f",
  "1c156d3450f2c1",
  "07b0ab3914648f",
  "07d2116fb0bc22",
  "0379ca22400a7a",
  "19ca397ece1938",
  "002c96be6954d3",
  "09ab443572f105",
  "1a1ef7da012543",
  "1d73a2d73a3325",
  "1a23dd5d26ae24",
  "01cb46cd2144f2",
  "145117dc655c3b",
  "104ad9fcdad2e5",
  "0bba73f7728529",
  "09a233df6fff88",
  "1157e555dcbbb3",
  "14712875b5fd19",
  "017e41c231f13f",
  "1db288bfd14c29",
  "0846dca8f85db5",
  "15372a63196b88",
  "1b83fa1e225900",
  "0e99781dde8fe3",
  "1c087a18eede09",
  "007a28c7b6e33d",
  "12269d7083481d",
  "195338d80b9392",
  "0b1ba1559ba2f4",
  "1a17e29e986cc6",
  "18d018dff249ca",
  "1664ffd8fd5d72",
  "0c3022444069ed",
  "1c6a7cba0210ee",
  "0a2336195ddf45",
  "1a555e8eba64d6",
  "18e818a63e4449",
  "0d90fa84d2b6c6",
  "0f72508794ec79",
  "064938f19d5201",
  "12984971d6cbce",
  "0b40acecf5d559",
  "086ce696752967",
  "035307e25e55b9",
  "0ceef63f391459",
  "1cc93ac408bcfe",
  "08a77aaca76bc2",
  "0774a3d89b69d2",
  "15824f003e1258",
  "0765760a6ddb08",
  "032a64674bbc22",
  "02333c251da559",
  "0724f54e124525",
  "1dff532115f98d",
  "1c2702ee2a9dab",
  "0ed81948ab9591",
  "177bb6b8b20cfe",
  "0c958591334e11",
  "0f9ed677b9a0b4",
  "053da4a377ae0b",
  "0a5ff6cc9fe7a5",
  "15997dc88b1ee5",
  "0002b98d8fbd8c",
  "1828877b3f4073",
  "1a57549831fb67",
  "10ef143cdd2c20",
  "0b9bb164f0304c",
  "00421439baa9ee",
  "0ee685acf41491",
  "1eb99fe373229b",
  "17ff04d619bc11",
  "04d427ffed7043",
  "04a6ee6b408e78",
  "1e027c28a6cdcb",
  "1a649d3cf935f3",
  "0a4d635665511e",
  "1d1eceeb12e5c8",
  "1decdfe9a708b9",
  "06d51a9ea16d03",
  "1362e5b539c114",
  "196f06e933ad95",
  "1d8251f3175ec7",
  "02071b94e5e60f",
  "19b691a0678e45",
  "0478a2cc62c45e",
  "0dd05daa8d44b3",
  "0a02c430a88053",
  "071cba54977c49",
  "0df53139a3a660",
  "071950e1c4fb14",
  "0768626fcec4b7",
  "1e9db321bf4431",
  "11fbc0a7c0d019",
  "0e9994ea789da6",
  "0c17d63ec14e34",
  "0c075014d93451",
  "03a5c3c9ef8448",
  "1a4d07bb1d7f2c",
  "1962761b5291ae",
  "04fe1a03bd5d9a",
  "0f834361f952df",
  "1e02aaa99973f5",
  "03cf86968f9324",
  "002b7d3b79e43c",
  "12fe2a9d24bf43",
  "081bb10bcc29fd",
  "0ea5a9ff91d4d2",
  "1d380ecf578332",
  "0c484bee7bb313",
  "03221473d8d233",
  "07634f9a6ea55b",
  "0a8c37ab1bf444",
  "1014678ff519e2",
  "0b0ce376342cef",
  "1c048b48eb0256",
  "04d5fcd0eb91ca",
  "194d24a718027c",
  "1459d63fcebd47",
  "14e21e7776ef66",
  "1a486ad5a6026f",
  "17090d04caff7a",
  "1debd7ffab57ae",
  "0e069679c27d39",
  "166383e0e28a2c",
  "10c0722155d2b2",
  "132201d388aefa",
  "1f2c943b3a9198",
  "1b0f179daefd27",
  "0195429ac04fc7",
  "05914d395fcd72",
  "0f8d363ab7447b",
  "0d29a081ee8fca",
  "1d3dacc2ae7978",
  "1d54e2587a9b5b",
  "137739216e4760",
  "19854cfe13548b",
  "173d5bd9a7a317",
  "1c7b8fa0e5280f",
  "003eb9ca400409",
  "103500ca5ca370",
  "0d6ed8705ea26a",
  "14c84d0061b395",
  "00afa56c5adeee",
  "14ca45b2240ec2",
  "06478a44f5bb4d",
]
`;
